@@ -310,12 +310,14 @@ Extension Modules
 Library
 -------
 
+- bpo-30068: _io._IOBase.readlines will check if it's closed first when
+  hint is present.
+
 - bpo-29694: Fixed race condition in pathlib mkdir with flags
   parents=True.  Patch by Armin Rigo.
 
 - bpo-29692: Fixed arbitrary unchaining of RuntimeError exceptions in
-  contextlib.contextmanager.
-  Patch by Siddharth Velankar.
+  contextlib.contextmanager.  Patch by Siddharth Velankar.
 
 - bpo-26187: Test that sqlite3 trace callback is not called multiple
   times when schema is changing.  Indirectly fixed by switching to
